# ChangeLog for app-admin/syslog-ng
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/syslog-ng/ChangeLog,v 1.190 2008/12/02 19:27:09 mr_bones_ Exp $

*syslog-ng-2.1.3 (02 Dec 2008)

  02 Dec 2008; Michael Sterrett <mr_bones_@gentoo.org>
  +syslog-ng-2.1.3.ebuild:
  version bump

  15 Oct 2008; Michael Sterrett <mr_bones_@gentoo.org>
  files/syslog-ng.logrotate:
  allow /var/log/messages to be missing (patch from  Edoceo via bug #242260)

  13 Oct 2008; Michael Sterrett <mr_bones_@gentoo.org>
  syslog-ng-2.1.1.ebuild:
  fix up magic sql support

*syslog-ng-2.1.1 (13 Oct 2008)

  13 Oct 2008; Robin H. Johnson <robbat2@gentoo.org>
  +syslog-ng-2.1.1.ebuild:
  Version bump because I want the suppress-repeats functionality for infra.

  17 Jul 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc

  25 May 2008; Markus Rothe <corsair@gentoo.org> syslog-ng-2.0.9.ebuild:
  Stable on ppc64; bug #223241

  24 May 2008; nixnut <nixnut@gentoo.org> syslog-ng-2.0.9.ebuild:
  Stable on ppc wrt bug 223241

  24 May 2008; Jeroen Roovers <jer@gentoo.org> syslog-ng-2.0.9.ebuild:
  Stable for HPPA (bug #223241).

  23 May 2008; Raúl Porcel <armin76@gentoo.org> syslog-ng-2.0.9.ebuild:
  alpha/ia64/sparc stable wrt #223241

  22 May 2008; Markus Meier <maekke@gentoo.org> syslog-ng-2.0.9.ebuild:
  amd64/x86 stable, bug #223241

*syslog-ng-2.0.9 (26 Mar 2008)

  26 Mar 2008; Michael Sterrett <mr_bones_@gentoo.org>
  +syslog-ng-2.0.9.ebuild:
  version bump

*syslog-ng-2.0.8 (31 Jan 2008)

  31 Jan 2008; Michael Sterrett <mr_bones_@gentoo.org>
  +syslog-ng-2.0.8.ebuild:
  version bump

  16 Jan 2008; Michael Sterrett <mr_bones_@gentoo.org> -files/syslog-ng.rc6,
  -syslog-ng-1.6.11-r1.ebuild:
  clean out 1.x series

  16 Jan 2008; Joshua Kinard <kumba@gentoo.org> syslog-ng-2.0.6.ebuild:
  Stable on mips.

  10 Jan 2008; Michael Sterrett <mr_bones_@gentoo.org>