@@ -6,13 +6,9 @@ AUX syslog-ng.confd 150 RMD160 b5ab31e1c285fdd2f41324abc2c6b39bce59038d SHA1 c5d
 AUX syslog-ng.logrotate 354 RMD160 120e617e36299bd7bea2ec226c2cda6e1574b793 SHA1 64abb48d2222e9702cbb33bc223507c44dbe2e85 SHA256 e8e1b6d87f8217c77c0bfbe3095cac0c4edcb72473cbd1423bf2ae7bffee8ca3
 AUX syslog-ng.logrotate.hardened 1696 RMD160 9f22685778cf6d9c54ab899e586650e356a66498 SHA1 2c40af7591dac343047ac7a517c4ee8a5cb5f0a7 SHA256 e4530dab9b9d3c1a78bc1349e4ae647a6747b0aba7b3d5192f029281d71c89bf
 AUX syslog-ng.rc6-r1 1894 RMD160 13084357eb4868779ddf12d839f574f5a36462b7 SHA1 880b5923ab0b988d1b486c47ff6023d7cb9bd26e SHA256 9273e5b2ae65e8c7d7cc7c24a43bc9bb35e64d972a4bd65f90cb4cdb16bcba44
-DIST syslog-ng-2.0.6.tar.gz 369302 RMD160 6d9308f7058434716bce87c70779fbc1fb948ba4 SHA1 8aa20a920e22072643d384b91109c973c2c74a71 SHA256 2e3c1f126173bdc2afeb3461b3cf8cb0a6693cdaff1639536a9833103707035e
 DIST syslog-ng-2.0.9.tar.gz 378779 RMD160 a937b39c7592e57533aa9f164127bef73c4dec0e SHA1 f7ea7bf6640d8ae2d745d70a883a7aa37f5bcd9d SHA256 b7e3378c2a8769e64a4ef7f9a14aff93797a33860c9c67ac4e74b824c6ef681d
-DIST syslog-ng-2.1.1.tar.gz 420883 RMD160 1ff88824f4d5d43dc2c6398ae809bcb4a6acf00b SHA1 11e5fb0b3b2b9f1ce026519755509c324cf4a2b4 SHA256 8acd1837fc12f0e65f9ecffb8c553bf783a350628acca3c2932bf2f4509fa485
 DIST syslog-ng-2.1.3.tar.gz 424056 RMD160 97a83fbc0dc1b5b02528a915b5d71869eb6cb90f SHA1 46d841196835caaee40cc34a2cebef5426e62d31 SHA256 6049f7571e83a04220d4045c9651fd623ef8c2ade63d905402afc2586197cdd4
-EBUILD syslog-ng-2.0.6.ebuild 2516 RMD160 02f4855942dfabae068f7dcbb1bea41154f6fc8b SHA1 6d63c51b133251c7ed8fd507a82983dce74b40cf SHA256 c4f3fff6e73be1e7372f9cc0db3d223c7d22e344387c4518af181f92c944d619
 EBUILD syslog-ng-2.0.9.ebuild 2517 RMD160 704172dae1e6020bbf701e3961de1c7e74888577 SHA1 6e86827fad618e1905b3f9c0681c854a1b2e010d SHA256 c590455727e253321a35ff9e0a2fb6c77d66bd375fd1c4baca6f1d12229d4104
-EBUILD syslog-ng-2.1.1.ebuild 2659 RMD160 d3ed5233eeb7c3372f3a95de2e0fff159206a3ac SHA1 5f919da9bd2e25f1d7947d83b602499bd2ae3491 SHA256 e9919a5ab3ebe8b6a10d513f899354cb72a0eca62ec7998fed6f204044c4b204
 EBUILD syslog-ng-2.1.3.ebuild 2554 RMD160 7dc67f22f2c6ee2e6540d13882e82b430bdae8e8 SHA1 ec35cedaadf7ca72ac8d9e1e0cccbdde4e1c7018 SHA256 05411ef5b2037265bc1caa71b29030e1348abadb81980254e4d89bb7bf7032a1
-MISC ChangeLog 25300 RMD160 16b3f43e951f1c2827369c5c6076fdf8c4712e1c SHA1 506694526c4a31a1bd7ae8cc2d27727905a96089 SHA256 cb0f83472710cc7057c262b3f5d708d418a98090caafcd38331c8c1966ea5f1e
+MISC ChangeLog 25433 RMD160 64860c468b7d861b431f85041d04aa1463110220 SHA1 d6d5cbf119ad469313e92ea0e23460342edba238 SHA256 e5d20edcc9834ca4b34886fece9d7aa63bbc1872dcad41f6c8577ae7491f08dc
 MISC metadata.xml 407 RMD160 cf71f8c335372c633573600fa8a135d51406ab6e SHA1 336703907e8fbc77f751b508f7b65f7775539e65 SHA256 b31b90dd95563d796552d348fbf1158e9d0d93f4ca37ad596d57f22f133c9ac9
