@@ -1,6 +1,10 @@
 # ChangeLog for app-admin/syslog-ng
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/syslog-ng/ChangeLog,v 1.190 2008/12/02 19:27:09 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/syslog-ng/ChangeLog,v 1.191 2008/12/02 21:57:32 mr_bones_ Exp $
+
+  02 Dec 2008; Michael Sterrett <mr_bones_@gentoo.org>
+  -syslog-ng-2.0.6.ebuild, -syslog-ng-2.1.1.ebuild:
+  clean out old versions
 
 *syslog-ng-2.1.3 (02 Dec 2008)
 
